--- a/mail/templates/mail/settings.html
+++ b/mail/templates/mail/settings.html
@@ -1,19 +1,19 @@
 {% extends 'core/base.html' %}
 {% block content %}
-<section>
-    <p id="close" onclick=BackToCNS() class="curs-pointer">< index/CNS</a></p>
+<section class="">
+    <p class="curs-pointer back-button" onclick=BackToCNS()()>Retour Index</p>
     {% if mail %}
-        <h2 class="mt-5 pl-5">Règle(s) d'envoi pour {{mail}} </h2>
+        <h2 class="mt-2 pl-5">Règle(s) d'envoi pour mail (id={{mail.mail_id}}, titre='{{mail.title}}') </h2>
     {% else %}
-        <h2 class="mt-5 pl-5">Règle(s) d'envoi </h2>
+        <h2 class="mt-2 pl-5">Règle(s) d'envoi </h2>
     {% endif %}
     <article class="mt-5 container">
         <div class="row">
-            <div class="col-1 bg-secondary"></div>
-            <div class="col-10">
-                <div class="w-100 mt-5 mb-5 text-center bg-tomato very-center cns-choice d-none" id="auto">Je ne souhaite pas envoyer ce mail automatiquement ... </div>
+            <div class="col-1 "></div>
+            <div class="col-10 bg-white">
+                <div class=" mt-5 mb-5 text-center bg-tomato very-center sett-choice d-flex" id="auto">Je ne souhaite pas envoyer ce mail automatiquement ... </div>
                 <form action="" method="post" id='formSettings' class="d-none">{% csrf_token %}
-                    <div class="row">
+                    <div class="col-12 d-flex">
                         {%for field in form%}
                         {% for error in field.errors %}
                         <div class="alert alert-danger">
@@ -21,8 +21,9 @@
                         </div>
                         {% endfor %}
                         {% endfor %}
-                        <div class="col-10 bg-tomato">{{form.frequency}}</div>
-                        <div class="col-2">
+                        <div class="col-1"></div>
+                        <div class="col-8 bg-blue-trans pt-3 mb-3 ">{{form.frequency}}</div>
+                        <div class="col-3 very-center">
                             <input type="submit"class="btn btn-primary big-btn" value="Enregistrer">
                             <p id="verif"></p>
                         </div>
@@ -30,7 +31,7 @@
                 </form>
 
             </div>
-            <div class="col-1 bg-secondary"></div>
+            <div class="col-1 "></div>
 
         </div>
     </article>
@@ -41,7 +42,7 @@
 <script type="text/javascript">
     const auto = document.getElementById('auto')
     const formSettings = document.getElementById('formSettings')
-    const colors = ['green', 'tomato'];
+    const colors = ['#00B4B5', 'tomato'];
     let count = 0
     param = GetParam()
     const BackToCNS = function(){
@@ -114,23 +115,24 @@
     }
     //choose display or remove
     auto.onclick = function () {
-        if (count == 0){
+        console.log(auto.style.backgroundColor)
+        console.log(auto.style.backgroundColor == 'tomato')
+        
+        if (auto.style.backgroundColor == "tomato"){
             appearChoice();
-            count = 1;
+            auto.style.backgroundColor = '#00B4B5'
         }
-        else if (count == 1){
+        else{
+            console.log("chgt color")
             disappearChoice();
-            count = 0;
+            auto.style.backgroundColor = "tomato"
         }
-        color = colors.shift();
-        colors.push(color);
-        auto.style.backgroundColor = color;
     };
 
-    //****** additionnal input for id_frequency_2
-    const getAdditionnalInputForFreq3 = function(){
-        inputMonth = document.getElementById('id_frequency_3')
-        inputMonth.parentNode.innerHTML = '<input type="radio" name="frequency" value="3" required="" id="id_frequency_2"> quand l\'animal a plus de {{form.age}} mois.</input>'
+    //****** additionnal input for id_frequency_4
+    const getAdditionnalInputForFreq4 = function(){
+        inputMonth = document.getElementById('id_frequency_4')
+        inputMonth.parentNode.innerHTML = '<input type="radio" name="frequency" value="4" required="" id="id_frequency_2"> quand l\'animal a plus de {{form.age}} mois.</input>'
         ageField =  document.getElementById('id_age')
         ageField.style.width="5rem"
         const button1 = ageField.previousSibling.previousElementSibling
@@ -139,13 +141,11 @@
         }
         return button1
     }
-    //****** additionnal input for id_frequency_3
-    const getAdditionnalInputForFreq4 = function(){
-        inputDate = document.getElementById('id_frequency_4')
-        inputDate.parentNode.innerHTML = '<input type="radio" name="frequency" value="4" required="" id="id_frequency_3"> à la date du {{form.date}}</input>'
+    //****** additionnal input for id_frequency_5
+    const getAdditionnalInputForFreq5 = function(){
+        inputDate = document.getElementById('id_frequency_5')
+        inputDate.parentNode.innerHTML = '<input type="radio" name="frequency" value="5" required="" id="id_frequency_3"> à la date du {{form.date}}</input>'
         dateField =  document.getElementById('id_date')
-        dateField.style.width="8rem"
-        dateField.placeholder="jj/mm/aaaa"
         const button2 = dateField.previousSibling.previousElementSibling
         dateField.onclick = () => {
             button2.checked = true
@@ -153,24 +153,25 @@
         return button2
     }
     //******ctrl before send form
-    const activeCTRL = function(but4, but5){
+    const activeCTRL = function(but5, but6){
         formSettings.addEventListener("submit", function (e) {
             //check the mail
             let verif = document.getElementById('verif'); 
             but1 = document.getElementById('id_frequency_0')
             but2 = document.getElementById('id_frequency_1')
             but3 = document.getElementById('id_frequency_2')
+            but4 = document.getElementById('id_frequency_3')
             console.log('but1 : ',but1.checked);
             console.log('but2 : ',but2.checked);
             console.log('but3 : ',but3.checked);
             console.log('but4 : ',but4.checked);
             console.log('but5 : ',but5.checked);
-            if (but1.checked || but2.checked || but3.checked){
+            if (but1.checked || but2.checked || but3.checked || but4.checked){
                 ageField.value = ""
                 dateField.value = ""
 
             }
-            else if (but3.checked){
+            else if (but4.checked){
                 if (ageField.value > 0 ){
                     //pass
                 } else{
@@ -181,7 +182,7 @@
                     e.preventDefault()
                 }
             }
-            else if (but4.checked){
+            else if (but5.checked){
                 const regex_date = /^([0-2]\d|3[0-1])\/(0\d|1[0-2])\/(\d{4})$/; 
                 if (regex_date.test(dateField.value)){
                     //pass
@@ -230,12 +231,12 @@
         disappearChoice();
         auto.style.backgroundColor = colors[1];
         {% endif%}
-        const butt3 = getAdditionnalInputForFreq3()
-        const butt4 = getAdditionnalInputForFreq4()
+        const butt5 = getAdditionnalInputForFreq4()
+        const butt6 = getAdditionnalInputForFreq5()
         auto.classList.remove("d-none");
         auto.classList.add("d-flex");
         fillForm()
-        activeCTRL(butt3, butt4)
+        activeCTRL(butt5, butt6)
     }
     $(document).ready(function() { 
         main() });
