us16 : As a user I feel the app is nice to see(dash ok , sheet ok, mail ok, info ok)

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -20,7 +20,7 @@
 		{% include "core/nav.html" %}
 	</div>
 	
-	<div class="right-part bg-grey">
+	<div class="right-part bg-grey overflow-hidden">
 		<div class="right-part-top mt-2">
 			{% include "core/search.html" %}
 		</div>
