--- a/mydashboard/templates/dashboard/index.html
+++ b/mydashboard/templates/dashboard/index.html
@@ -1,10 +1,10 @@
 {% extends 'core/base.html' %}
 {% block content %}
 <section class="h-100 ">
-	<h2 class="mt-3 mb-3 pl-3">
-        Tableau De Bord
-    </h2>
 	<article class="h-100 p-3 container">
+		<h2 class="mt-3 pl-3">
+	        Tableau De Bord
+	    </h2>
 		<div class="h-100 row">
 			<div id='graph' class="h-100 graph col-9 text-center "></div>
 			<div class="col-3 container-dash-3-buttons bg-blue-trans">
@@ -37,15 +37,15 @@
 
 	const owner = function(){
 		//this function sends user to sheet/index.html
-		window.location.href = "{% url 'sheet:index' own=1 search=1%}"
+		window.location.href = "{% url 'sheet:index' own=1 action='display' search=1%}"
 	}
 	const contacted = function(){
 		//this function sends user to sheet/index.html
-		window.location.href = "{% url 'sheet:index' own=1 search=2%}"
+		window.location.href = "{% url 'sheet:index' own=1 action='display' search=2%}"
 	}
 	const to_contact = function(){
 		//this function sends user to sheet/index.html
-		window.location.href = "{% url 'sheet:index' own=1 search=3%}"
+		window.location.href = "{% url 'sheet:index' own=1 action='display' search=3%}"
 	}
 </script>
 {% endblock  %}
