--- a/sheet/templates/sheet/alter_owner.html
+++ b/sheet/templates/sheet/alter_owner.html
@@ -42,7 +42,7 @@
 						<h4 class="pl-3">Ses adoptions : </h4>
 						<ol class="ml-5">
 							{% for animal in animals %}
-							<li class="curs-pointer" onclick=GoTo({{animal.id}})>  {{animal.name}} - {{animal.species_name}} - {{animal.admin_data.neuter_status}}   </li>
+							<li class="curs-pointer" onclick=GoToAnimal({{animal.id}})>  {{animal.name}} - {{animal.species_name}} - {{animal.admin_data.neuter_status}}   </li>
 							{% endfor %}
 						</ol>
 					</div>
@@ -53,9 +53,6 @@
 		</form>
 	</article>
 </section>
-{% load static %}
-<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-<script type="text/javascript" src='{% static "sheet/js/utils.js" %}'> </script>
 <script type="text/javascript">
 	/* *** plan ***
 	1/ User select new or former owner
@@ -70,7 +67,7 @@
 		// window.location.href = window.location.href; 
 	}
 
-	const GoTo = function(given_id){
+	const GoToAnimal= function(given_id){
 		{% for animal in animals %}
 		if ({{animal.id}} == given_id){
 			window.location.href = "{% url 'sheet:alter' animal.id%}"
