--- a/spa-conf/static/css/change.css
+++ b/spa-conf/static/css/change.css
@@ -2,6 +2,7 @@
 html{
 	font-family: 'Amatic SC', serif !important; 
 	height: 100%;
+	z-index: 1; 
 }
 
 body{
@@ -49,6 +50,9 @@ h2{
 		height: 1rem; 
 		padding : 1rem 0;
 	}
+	.hover-under:hover{
+		text-decoration: underline; 
+	}
 	.text-blue{
 		color: blue; 
 	}
@@ -81,6 +85,7 @@ h2{
 	}
 	.no-a:hover{
 		text-decoration : none;}
+	
 	.scrolable{
 		overflow: scroll;
 		max-height: 25rem; 
@@ -92,10 +97,10 @@ h2{
 		height: 36rem;
 	} */
 	.right-part-bottom{
-		height: 92%;
+		max-height: 35rem;
 	}
 	.right-part-top{
-		height: 8%;
+		max-height: 10rem;
 	}
 	.very-center{
 		display: flex; 
@@ -382,4 +387,24 @@ h2{
 	}
 	.sec-content{
 		height:32rem;
+	}
+
+/* search_bar*/
+
+	.choice-container{
+		background-color: tomato;
+		/* display: inline; */
+		float:left;
+		z-index: 10; 
+		max-height : 8rem;
+		overflow-y: scroll; 
+		padding-left: 2rem;
+		cursor: pointer; 
+	}
+	.choice-to-select:hover{
+		width: 100%;
+		border: 1px black solid;
+	}
+	#id_search_input{
+		height: 2.5rem;
 	}
