--- a/mail/templates/mail/index.html
+++ b/mail/templates/mail/index.html
@@ -16,7 +16,7 @@
             <div class="col-1"></div>
 
         </div>
-		<div class="row  scrolable">
+		<div class="row  scrolable-y">
 			<!-- nvl ligne -->
 				<form id ="mail_form" class="w-100" action="{% url 'mail:index'%}" method="POST">
 					{% csrf_token %} 
