--- a/mail/templates/mail/content.html
+++ b/mail/templates/mail/content.html
@@ -5,13 +5,13 @@
 {% extends 'core/base.html' %}
 {% block content %}
 <section class="">
-    <p class="curs-pointer back-button" onclick=BackToCNS()()>Retour Index</p>
+    <p class="curs-pointer back-button" onclick=BackToCNS()()>Retour CNS</p>
     {% if mail %}
         <h2 class="mt-2 pl-5">Contenu du mail (id={{mail.mail_id}}, titre='{{mail.title}}') </h2>
     {% else %}
         <h2 class="mt-2 pl-5">Contenu du mail </h2>
     {% endif %}
-    <article class="mt-5 container">
+    <article class="mt-3 container">
         <div class="row">
             <div class="col-7 pt-3">
                 <form id="form_mail_skull" action="" method='post'>
@@ -73,7 +73,7 @@
                         </select>
                     </div>
                 </div>
-                <div class="row m-2 p-3 d-flex justify-content-around bg-white">
+                <div class="row mt-1 ml-3 mr-3 d-flex justify-content-around bg-white">
 
                     <button class="button-mail-content mt-1 mb-2" onclick='GetOverview()'>Aperçu</button>
                     <button class="button-mail-content mt-1 mb-2" onclick='submit_datas()'>Enregistrer</button>
@@ -83,6 +83,7 @@
         <div class="col-1 bg-secondary"></div>
     </article>
 </section>
+<script type="text/javascript" src='/static/mail/js/utils.js'> </script>
 <script type="text/javascript">
     let is_chrome = navigator.userAgent.toLowerCase().indexOf('chrome') > -1;
          
@@ -191,7 +192,6 @@
 
     // //this function sends datas to server to save them
     const submit_datas = function(){
-        alert("submit")
         //check if fields are empty
         const datas = get_data()
         let canSave = true
